--- a/Dyslexia_Frontend.ipynb
+++ b/Dyslexia_Frontend.ipynb
@@ -19,7 +19,7 @@
       },
       "outputs": [],
       "source": [
-        "!ngrok config add-authtoken 2qRMy8d5hpeItHPYABmVLnMXJLD_8w4i6xT31sJ1vKzdrSAD"
+        "!ngrok config add-authtoken ***"
       ]
     },
     {
